// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kpi-alarms Renders \`kpi-alarms\` with fetching error 1`] = `
<div
  class="position-relative"
>
  <c-progress-overlay-stub />
  <kpi-alarms-filters-stub
    query="[object Object]"
  />
  <kpi-alarms-chart-stub
    interval="[object Object]"
    metrics=""
    responsive=""
    sampling="day"
  />
  <kpi-error-overlay-stub />
</div>
`;

exports[`kpi-alarms Renders \`kpi-alarms\` without metrics 1`] = `
<div
  class="position-relative"
>
  <c-progress-overlay-stub />
  <kpi-alarms-filters-stub
    mindate="1385766000"
    query="[object Object]"
  />
  <kpi-alarms-chart-stub
    interval="[object Object]"
    metrics=""
    min-date="1385766000"
    responsive=""
    sampling="day"
  />
  <!---->
</div>
`;
